update good code
